Fixes replied message overflow

--- a/src/platform-apps/channels/styles.scss
+++ b/src/platform-apps/channels/styles.scss
@@ -316,9 +316,6 @@ $scrollbar-width: 5px;
           align-items: center;
           margin: 5px 0;
           &-text {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
             padding-left: 8px;
             border-left: 2px solid theme.$color-primary-5;
             flex-grow: 1;
